# Sophia

./: LICENSE  OSE_IMPLEMENTATION_ROADMAP.md  README.md
ose-api/: .gitignore  Makefile  PROTO_GENERATION.md  README.md  WEEK3_IMPLEMENTATION_STATUS.md  XI_MEASUREMENT_GUIDE.md  go.mod
ose-api/cmd/advisory-server/: main.go
ose-api/deployments/docker/: Dockerfile  docker-compose.yml
ose-api/internal/config/: config.go
ose-api/internal/handlers/: advisory_handler.go
ose-api/pkg/validation/: constraints.go
ose-api/pkg/xi/: calculator.go  calculator_test.go
ose-api/proto/advisory/v1/: advisory.proto
ose-cli/: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ose-cli/cli/: __init__.py  main.py
ose-cli/tests/: test_main.py
